syntax = "proto3";
option java_multiple_files = true;
import "google/protobuf/timestamp.proto";
package com.example.files;

service FileUploadService {

  // A simple  RPC.
  // returns Product for a given id
  rpc GetFileMetadata(FileMetaDataRequest) returns (FileMetaDataResponse);
  rpc UploadFile(UploadFileRequest) returns (UploadFileResponse);
  rpc DownloadFile(DownloadFileRequest) returns (DownloadFileResponse);
  rpc DeleteFile(DeleteFileRequest) returns (DeleteFileResponse);
  rpc RenameFile(RenameFileRequest) returns (RenameFileResponse);
  rpc add(AddInputRequest) returns (AddInputRespose);
  rpc Sort(SortInputRequest) returns (SortInputResponse);
}

message FileMetaDataRequest {
  string file_name = 1;
  string directory = 2;
}

message FileMetaDataResponse {
  string name = 1;
  double filelength = 2;
  google.protobuf.Timestamp dateModified = 3;
}

message UploadFileRequest{
  string file_name = 1;
  string directory = 2;
  bytes payload = 3;
}

message UploadFileResponse{
  string file_name = 1;
  string directory = 2;
  bool upload_result = 3;
}

message DownloadFileRequest{
  string file_name = 1;
  string directory = 2;
}

message DownloadFileResponse{
  string file_name = 1;
  bytes content = 2;
}

message DeleteFileRequest{
  string file_name = 1;
  string directory = 2;
}

message DeleteFileResponse{
  string file_name = 1;
  string directory = 2;
  bool delete_result = 3;
}

message RenameFileRequest{
  string from_file_name = 1;
  string directory = 2;
  string to_file_name = 3;
}

message RenameFileResponse{
  string from_file_name = 1;
  string directory = 2;
  string to_file_name = 3;
  bool rename_result = 4;
}

message AddInputRequest{
  int64  i = 1;
  int64  j = 2;
}

message AddInputRespose{
  int64 result = 1;
}

message SortInputRequest{
  repeated int32 input = 1;
}

message SortInputResponse{
  repeated int32 output = 1;
}
